# dictionaryConverter

./: CMakeLists.txt  README.md
files/: output.dct
src/: dictionaryConverter.c
